--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
+version: '3.8'
+
 services:
-  web:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: coldhub-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_TELEMETRY_DISABLED=1
-    restart: unless-stopped
-    container_name: coldhub-app
+    networks:
+      - coldhub-network
+
+networks:
+  coldhub-network:
+    driver: bridge
 
